<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/switch_pageBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/act1ButtonText"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/receiveStringText"
            android:textSize="16sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/receiveString"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/defaultText"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/receiveIntText"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginTop="30dp"/>
        
        <TextView
            android:id="@+id/receiveInt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="18sp"
            android:text="@string/defaultText"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5">

    </LinearLayout>
</LinearLayout>