<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Main2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/typeStringText"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/EdtString"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="here"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/typeIntText"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/EdtInt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="here"
            android:inputType="numberSigned" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4">

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancelText"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp" />

        <Button
            android:id="@+id/checkBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/checkText"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>